--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,7 @@
 body{
-    background-color: lightpink;
+    height: 100%;
+    min-height: 100%;
+    background: url("./images/lamb.jpg") center center no-repeat;
     p{
         color: aquamarine;
     }
